# sherlock

./: README.md  pyproject.toml
sherlock/: node_proxy_bootstrap.js
sherlock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
