[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock"
version = "0.1.0"
description = "Intercept LLM API traffic and display token usage in a live dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mitmproxy>=10.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "click>=8.0.0",
]

[project.scripts]
sherlock = "sherlock.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sherlock = ["*.js"]
